--- a/src/blog-content/33.md
+++ b/src/blog-content/33.md
@@ -8,11 +8,11 @@ imageLink: https://www.nasa.gov/history/alsj/#Mag37
 Reading *The Technological Republic* by Alex Karp and Nicholas Zamiska brought up a concept I've been frustratingly observing everywhere at Cornell. No one believes in anything. He argues that the problem with SWEs at Google opposing government contract work—like building AI tools for the military—isn't that they are pacifists because that would mean that they actually faithfully believe in something. It is that they do not believe in anything. This lack of belief, founded by moral superiority-driven opposition to stuff, fostered the current environment of hyperfragility and [dogma-driven conformity](https://en.wikipedia.org/wiki/Horseshoe_theory), where dissent is punished not for being wrong, but for disrupting the fragile consensus. blah blah blah. 
 
 Basically... everyone wants to get a good internship to get a good job to be rich to no end. I've found my end, but I'm trying to formally articulate it from my informal mental model of it. To do so, you must start from first principles (a word now almost as overused as "disruption"). If it's not iron-clad, then I won't be totally convinced of it, and I'll half-ass it.
-###### AXIOMS:
+**AXIOMS:**
 1. Life, particularly conscious life, has intrinsic value.
 2. That which preserves and extends valuable entities is itself valuable.
 3. Technological and political systems are judged by their capacity to address existential threats.
-###### PROPOSITIONS:
+**PROPOSITIONS:**
 **P1:** If we exist in a simulation, optimal action requires either discovering the simulation's parameters or finding an escape.
 
 **P2:** If we are not in a simulation, then:
@@ -48,16 +48,12 @@ Basically... everyone wants to get a good internship to get a good job to be ric
 - Work in areas like sustainable energy, AI alignment, defense technology, space exploration, and biosecurity is morally superior to work in non-essential services or technologies
 - Therefore: Students should prioritize educational and professional paths that directly support the preservation of humanity through American technological dominance rather than pursuing careers in areas with lower impact on existential risk (e.g., "college recruiting companies, food delivery apps")
 
-**P10:** Agricultural technology represents a critical focus area for preserving humanity.
-- Food security is a fundamental requirement for human survival and American dominance
-- Climate change threatens conventional agricultural systems and biodiversity
-- Advanced agricultural technologies offer solutions to:
-    - Enhance crop resilience to changing climate conditions
-    - Improve nutritional yield from limited resources
-    - Enable more efficient resource utilization
-    - Support both terrestrial sustainability and off-planet expansion
-- Therefore: Work in agricultural technology directly supports the preservation of conscious life by addressing multiple existential threats simultaneously
-- Such work aligns with justice when conducted within the American innovation ecosystem, strengthening national security and global leadership
+**P10:** Agricultural technology represents a strategically neglected domain with exceptional leverage for preserving humanity.
+- Food security is foundational to all human civilization and survival
+- Agritech receives disproportionately less attention than AI, energy, and defense, creating market inefficiency
+- This neglect creates superior marginal returns for capital and talent
+- Agricultural systems face compounding threats: climate change, soil degradation, water scarcity, and population pressure
+- Therefore: Work in agricultural technology maximizes impact by addressing critical vulnerabilities while benefiting from less competition and diminishing returns than saturated domains
 
 **P11:** Capital accumulation for advancing agricultural technology is just.
 - Agritech innovation requires significant financial resources
