--- a/src/blog-content/35.md
+++ b/src/blog-content/35.md
@@ -9,7 +9,7 @@ imageLink:
 
 started Wed Feb 5 11:35 PM
 finished Fri Feb 21 2:11 AM (beta)
-deployed Sun March 9 9:14 AM
+deployed Sun March 9 9:14 PM
 
 I feel no satisfaction. Classic Huberman dopaminergic curve. This took 16 days from idea -> Testflight. Finished -> deployed was mostly me operating at 10% capacity after burnout + random first-time app deployment mistakes that I'll never make again. Twirl, which I started in the Armada Venture Cup on Saturday is almost ready for Testflight, taking ~1.5 days. Maybe I'll feel it when I hit our first organic user. Or after a launch party but that would probably be pseudo-satisfaction. Or after $10K MRR. 
 
