--- a/src/blog-content/36.md
+++ b/src/blog-content/36.md
@@ -5,7 +5,7 @@ headerImage: /theworld.png
 imageAuthor: The World, Donnus Nicholas Germanus
 imageLink: https://en.m.wikipedia.org/wiki/File:Claudius_Ptolemy-_The_World.jpg
 ---
-Saw this on Titter https://x.com/foundertribune/status/1901285950015066237
+Saw this on [Titter](https://x.com/foundertribune/status/1901285950015066237). Not a typo.
 
 There's always a unrelenting chronic superego reversion-to-the-mean pressure. Reversion to Goldman-Google pressure. The most virtuous thing one can do is resist that pressure even if the Matrix sends its best agents to stop you. I feel it. It's hard but that seems to be what it takes to do the most important work in the world. 
 
