--- a/src/blog-content/38.md
+++ b/src/blog-content/38.md
@@ -42,4 +42,5 @@ The trend is obvious. The most effective teams in the world regardless of craft 
 ![img5](/net.png)
 This was [CDJ](https://cornelldatajournal.org/)'s organizational structure after I reformed it this semester. E-board is working pretty well and the editorial team is working beautifully. So beautifully that this is the most productive semester of all time for the club. But there is a dislocation at the PL-Analyst level. They are currently separated from me with a layer of hierarchy and it isn't working well. Looking at the structures above, it's clear that direct connection to all team members is vital for success. So I must do that.
 
+![img6](/ye.png)
 We'll see how this goes. Observe & Act type shit. It's so braindead but I forget sometimes. 
