--- a/src/blog-content/45.md
+++ b/src/blog-content/45.md
@@ -1,8 +1,8 @@
 ---
-title: Precociousness
+title: Preconsciousness
 date: 2025-06-09
 headerImage: /preconcious.png
-imageAuthor: Precociousness, @lichthauch
+imageAuthor: Preconscious, @lichthauch
 imageLink: https://x.com/lichthauch/status/1927346090036068422
 ---
 You should either be really fat or really fit. You should write to clearly communicate or extremely confuse. You should really try or not try at all.
