--- a/src/blog-content/47.md
+++ b/src/blog-content/47.md
@@ -7,7 +7,7 @@ imageLink: https://en.wikipedia.org/wiki/Sagrada_Fam%C3%ADlia
 ---
 I was just onboarding the new head of my high school org and it quickly became obvious that many things are important when leading an organization. Various factors indicate whether an organization is on the right track, but it's easy to forget when hit with all the input. I was able to distill it down to one thing: speed.
 
-![morph](/morph.PNG)
+![morph](/morph.png)
 
 Even if people on the outside think an organization is moving fast, the second derivative might be negative. The most important metric is peoples' perception of speed *on the inside*. Speed seems to have strong inertia. If a leader moves slowly, then employees move slowly, then the leader gets discouraged, then employees get discouraged, and a vicious cycle starts. The opposite is true for moving fast.
 
