--- a/src/blog-content/49.md
+++ b/src/blog-content/49.md
@@ -15,6 +15,6 @@ First I began tame, printing a flyer advertising "5-10K STARTUP GRANTS FOR CORNE
 Still, we got this message in the Slack #general channel a day later: 
 "@channel Someone has been leaving random print outs taped around the shop at Rev. If you happen to see someone doing this, please let me know - it is not appropriate to be taping things to pillars or doors. Please be respectful of the space we are all working in!"
 
-I was pissed off—pissed that they didn't give us credit. So I had to go round two. This time, Om and I printed out tons of mini JD Vances and Hans Landas saying "You're sheltering JD Vance edited images, are you not?" I meticulously cut them out with an X-ACTO knife, 3D printed a [Rococo](https://en.wikipedia.org/wiki/Rococo#:~:text=Rococo%2C%20less%20commonly%20Roccoco%20(%2F,white%20and%20pastel%20colours%2C%20sculpted) frame, painted it brown, X-ACTO'd annoying double-sided tape into perfect segments, and stuck it on a random wall as if it was the Louvre. It was much better than duct taping a banana to a wall. (Imagine) I also showed every mentor what I made and handed out the extra Vance's to random people. AND I changed the background of the Raspberry Pi desktop background to JD Vance, morphing him into [Dan Crenshaw](https://x.com/rishi__gurjar/status/1938366506087092385), in view of everyone. 
+I was pissed off—pissed that they didn't give us credit. So I had to go round two. This time, Om and I printed out tons of mini JD Vances and Hans Landas saying "You're sheltering JD Vance edited images, are you not?" I meticulously cut them out with an X-ACTO knife, 3D printed a [Rococo](https://en.wikipedia.org/wiki/Rococo) frame, painted it brown, X-ACTO'd annoying double-sided tape into perfect segments, and stuck it on a random wall as if it was the Louvre. It was much better than duct taping a banana to a wall. (Imagine) I also showed every mentor what I made and handed out the extra Vance's to random people. AND I changed the background of the Raspberry Pi desktop background to JD Vance, morphing him into [Dan Crenshaw](https://x.com/rishi__gurjar/status/1938366506087092385), in view of everyone. 
 
 Yet, with all that evidence, we still got no credit. I came to the space today and our beautiful piece of art was robbed but the #general chat was empty. It feels like they want us to go bigger, [more beautiful](https://en.wikipedia.org/wiki/One_Big_Beautiful_Bill_Act)—no swamp all signal. We might need to up our game if they insist.
