--- a/src/blog-content/50.md
+++ b/src/blog-content/50.md
@@ -35,4 +35,4 @@ Just talked to a vineyard manager of the second or third largest VMC in Napa. He
 
 Talked to another one and they said the same thing. They have a ton of data but nothing combines the insights. It's like having a home smart thermostat, fridge, kettle, lights, but they all have their own apps. They should have a Google Home. 
 
-It's obvious that agriculture is going to keep increasing the amount of technology is uses. But all the technology isn't really that useful unless it works together. It might be better to work on that — an operating system for agriculture — and then later build the hardware around it.
+It's obvious that data is only going up in agriculture. But the data isn't really that useful unless it works together. And works with the boots on the ground. It might be better to work on that — an operating system for agriculture — and then later build the hardware around it.
