--- a/src/blog-content/53.md
+++ b/src/blog-content/53.md
@@ -15,12 +15,12 @@ California vineyards have a variety of sensor inputs today—from remote sensing
 
 ![d2](/d2.png)
 
-With farms using our operating engine, vertically integrating the perception stack would be much easier. It'd kind of be like building an Apple ecosystem, but starting with MacOS. We'd start with visual sensing since that would have the largest step-function value add and move to microclimate/environmental sensors. 
+With farms using our operating engine, vertically integrating the perception stack would be much easier. It'd kind of be like building an Apple ecosystem, but starting with MacOS. We'd move to visual sensing since that would have the largest step-function value add and later to microclimate/environmental sensors. 
 
 ![d1](/d1.png)
 
-The grand challenge is full action autonomy. A robot that can [thin](https://nygpadmin.cce.cornell.edu/uploads/doc_17.pdf), vertically shoot position, prune, harvest, and even graft. I have no idea what the robot would look like—anything from drones with mutable arms to a humanoid. It would be impossible to achieve that without perception + the operating engine working together. At that point, the perception-OE-action ecosystem would be impossible for farmers to leave. Or maybe we wouldn't need farmers at that point. Hopefully not on Mars. Definitely not beyond the Oort Cloud.
+The grand challenge is full action autonomy. A robot that can [thin](https://nygpadmin.cce.cornell.edu/uploads/doc_17.pdf), vertically shoot position, prune, harvest, and even graft. I have no idea what the robot would look like—anything from drones with mutable arms to a humanoid. It would be impossible to achieve that without perception + the OE working together. At that point, the perception-OE-action ecosystem would be impossible for farmers to leave. Or maybe we wouldn't need farmers at that point. Hopefully not on Mars. Definitely not beyond the Oort Cloud.
 
-Other cool things on the OE side is build a highly accurate digital twin. Agricultural data moats exist right now since you can't collect a seasons worth of data in a small period of time, like it is for foundational LLM pretraining data. But if you could run a million years in simulation in a day, you'll know how most years will look like given a set of environmental conditions. And you can do things like train reinforcement learning drones to learn how to fly through rows and record the most useful data (rather than classically telling them to obstacle-avoid). Accuracy will be a major painpoint and Gaussian splatting might not be good enough. In the long-run, we might need to build it out on a computational plant at the [cellular](https://github.com/ArcInstitute/state) level to grow plants from conception. Low marginal returns at that point probably. But we might be omniscient.
+Other cool things on the OE side are highly accurate digital twins. Agricultural data moats exist right now since you can't collect a seasons worth of data in a small period of time, like it is for foundational LLM pretraining data. But if you could run a million years in simulation in a day, you'll know how most years will look like given a set of environmental conditions. And you can do things like train reinforcement learning drones to learn how to fly through rows and record the most useful data (rather than classically telling them to obstacle-avoid). Accuracy will be a major painpoint and Gaussian splatting might not be good enough. In the long-run, we might need to build a computational plant at the [cellular](https://github.com/ArcInstitute/state) level to grow virtual plants from conception. And then we can make virtual forests. Then add virtual humans in them. Low marginal returns at that point probably. But we might be omniscient.
 
 ![d3](/d3.png)
