--- a/src/blog-content/54.md
+++ b/src/blog-content/54.md
@@ -1,5 +1,5 @@
 ---
-title: Tyrannus Rex
+title: Tyrannus Rexi
 date: 2025-07-25
 headerImage: /krel.png
 imageAuthor: Portrait of Oswolt Krel, Albrecht Dürerkr
@@ -39,11 +39,11 @@ Let's go deeper:
 
 Even the greatest glazer of American democracy would agree that the more degrees of freedom from the people, the more the will of the people is degraded. It's a simple game of telephone. 
 
-The people that complain about the electoral college suppressing their vote never complain about the Executive branch bureaucracy with anything from **3** to **8!** degrees from the American voter. That bureaucracy—or "Deep State?"—stays between administrations and only changes when the individuals transfer, retire, or are fired.
+The people that complain about the electoral college suppressing their vote never complain about the Executive branch bureaucracy with anything from **3** to **10!** degrees from the American voter. That bureaucracy—or "Deep State?"—stays between administrations and only changes when the individuals transfer, retire, or are fired.
 
 The Framers didn't believe in direct democracy since it doesn't work at scale. How would 3M to 300M (now) people come and vote all together for everything? Republics—which "refine and enlarge the public view" via representatives are meant for scale ([Madison](https://avalon.law.yale.edu/18th_century/fed10.asp)). Presidential appointments with confirmation are meant to prevent the president's "private inclinations and interests" from interfering with meritocracy ([Hamilton](https://avalon.law.yale.edu/18th_century/fed76.asp)). The Judiciary—the weakest power—is meant to be undemocratic, given lifetime appointments, since "nothing can contribute so much to its firmness and independence as permanency in office" ([Hamilton](https://avalon.law.yale.edu/18th_century/fed78.asp)).
 
-Did they really expect a **5-8 degree** deep separation though? An iron [pentagon](https://www.unqualified-reservations.org/2007/05/iron-polygon-power-in-united-states/) (probably) exists—with Congress, Interest Groups, Federal Bureaucracy, Press, and the Universities *quid pro quo*ing each other. Totally beyond any sense of a direct democracy or slightly indirect republic (branches in order of degrees away from the People && increasing Power (the Framers' intelligent design): jud, exec, leg). 
+Did they really expect a **5-10 degree** deep separation though? An iron [pentagon](https://www.unqualified-reservations.org/2007/05/iron-polygon-power-in-united-states/) (probably) exists—with Congress, Interest Groups, Federal Bureaucracy, Press, and the Universities *quid pro quo*ing each other. Totally beyond any sense of a direct democracy or slightly indirect republic (branches in order of degrees away from the People && increasing Power (the Framers' intelligent design): jud, exec, leg). 
 
 We would never think of ourselves as living in an oligarchy—*imagine*! The wealthy obviously don't wield disproportionate [influence](https://en.wikipedia.org/wiki/Citizens_United_v._FEC) over policy. Lobbying organizations definitely aren't [*that*](https://en.wikipedia.org/wiki/American_Fuel_and_Petrochemical_Manufacturers) [effective](https://en.wikipedia.org/wiki/AIPAC), and they certainly don’t straight-up write legislation. The Press wouldn't make their business model political division, enforce certain narratives that almost seem Brownian in their arbitrariness, or be [hereditary monarchies](https://en.wikipedia.org/wiki/A._G._Sulzberger). The Bureaucracy doesn't enforce the status quo, despite whatever administration is in charge. Large corporations would never cozy up to power in exchange for lax regulatory oversight. And of course, there’s no revolving door between industry, government, and media. Everything is fine. Democracy is working perfectly.
 
