--- a/src/blog-content/56.md
+++ b/src/blog-content/56.md
@@ -24,7 +24,7 @@ Imagine I killed myself. My physical form would be gone to others, but they coul
 When we think about *uploaded intelligence*, there are a few ways we can make that happen.
 1. Copy every neuron in your nervous system to a computer (somehow). Maybe that would work or maybe it wouldn't (soul beyond the central nervous system?). This would theoretically keep your + other people's view of you alive.
 2. Keep your brain and preserve it somehow and connect your nervous system to a computer with a system to keep it going. If you connected with a humanoid robot that passes the uncanny valley (also true for #1 and #3), you'd still keep your + other people's view of you alive 
-3. Take all the output from an individual and have a model treat that as it's *[history](https://rishigurjar.com/blog/minimum-self)*. Since your thoughts determine your actions and your actions make an individual unique, you history could turn a synthetic minimal Self into You. Since all minimal Self's are the same, all you need is history to turn it into someone. Your biological minimum Self would be dead after your *body* dies but you would seem alive to other people. 
+3. Take all the output from an individual and have a model treat that as its *[history](https://rishigurjar.com/blog/minimum-self)*. Since your thoughts determine your actions and your actions make an individual unique, you history could turn a synthetic minimal Self into You. Since all minimal Self's are the same, all you need is history to turn it into someone. Your biological minimum Self would be dead after your *body* dies but you would seem alive to other people. 
 
 #3 is possible today, which is scary, but it's still a copy. Definitely not that scary by the end of our lifetime. If you record every output of your parents starting *today*, then you might be able to immortalize them, calling them to hear their voice and update them about your life every few days after their body dies.
 
