--- a/src/blog-content/63.md
+++ b/src/blog-content/63.md
@@ -19,7 +19,7 @@ If the government commits a ton of war crimes in foreign countries, they'll have
 
 Or what if the government wants data on citizens because one of them *may* be a terrorist? If they tried taking it directly, that would be [illegal](https://en.wikipedia.org/wiki/Fourth_Amendment_to_the_United_States_Constitution) without a warrant—they need probable cause. If they want your [bank](https://en.wikipedia.org/wiki/United_States_v._Miller_(1976)) or [phone call](https://en.wikipedia.org/wiki/Smith_v._Maryland) records, they can take it without a warrant since you've consented to giving it away, so it doesn't violate the Fourth Amendment. The line between Fourth Amendment violation / not violation is how consensual the data extraction system is.
 
-If the government tries to get your [vehicle GPS data](https://en.wikipedia.org/wiki/United_States_v._Jones_(2012)) for an extended length of time, [cell site location information](https://en.wikipedia.org/wiki/Carpenter_v._United_States) (CSLI)—location data your phone transmits to cell towers all the time—or [phone data](https://en.wikipedia.org/wiki/Riley_v._California), they need a warrant. The line seems well-defined to me, but it only applies for these narrow datapoints, and because the data is recorded "without any affirmative act on the part of the user beyond powering up" their phone. For inputted data, like the stuff you've put into Facebook, Twitter, YouTube, TikTok, etc., it's the Wild West. That stuff is routinely bought up by government agencies from data brokers to deport people, etc. Since [purchasing commercially available data](https://en.wikipedia.org/wiki/Third-party_doctrine) isn't searching commercial databases, the government arbitrages the statute. The data isn't always anonymized, which might make it okay in my view, it's *pseudonymized*, which means direct identifiers (name, SSN, etc.) are gone but persistent identifiers (advertising ID, cookie ID, IMEI, IP address) remain and can be used to track people with additional data. It's obvious to anyone that isn't braindead. This skirts the law since many forms of the data is "voluntarily" given up when you input data on apps, but data brokers don't let you track or delete data they have on you. Is that really *voluntary*? The only way to stop it is to become Amish because social media is quite integral to existing in society today. *Carpenter v. US* (2018) decided that the government needs a warrant to access CSLI largely because (1) phones are required to participate in modern society and thus are carried everywhere and (2) data is recorded without obvious and explicit consent and the only to stop CSLI from being recorded is turning off the phone's network connection or powering it off. Those reasons easily back an argument against current data broker practices. The case also talked about the dangers of having the government track citizens' every move in public spaces. That's possible with CSLI data (public + private spaces) but even easier with modern surveillance devices, like Flock Safety (only public spaces). Cory Doctorow shit on the company and endorsed an Ithaca anti-Flock group—first time I've heard of one. CCTV + ML makes location tracking of people trivial. I don't see the government making that illegal since they only work in public spaces, where people have don't have a reasonable expectation of privacy.
+If the government tries to get your [vehicle GPS data](https://en.wikipedia.org/wiki/United_States_v._Jones_(2012)) for an extended length of time, [cell site location information](https://en.wikipedia.org/wiki/Carpenter_v._United_States) (CSLI)—location data your phone transmits to cell towers all the time—or [phone data](https://en.wikipedia.org/wiki/Riley_v._California), they need a warrant. The line seems well-defined to me, but it only applies for these narrow datapoints, and needs a warrant largely because the data is recorded "without any affirmative act on the part of the user beyond powering up" their phone. For inputted data, like the stuff you've put into Facebook, Twitter, YouTube, TikTok, etc., it's the Wild West. That stuff is routinely bought up by government agencies from data brokers to deport people, etc. Since [purchasing commercially available data](https://en.wikipedia.org/wiki/Third-party_doctrine) isn't searching commercial databases, the government arbitrages the statute. The data isn't always anonymized, which might make it okay in my view, it's *pseudonymized*, which means direct identifiers (name, SSN, etc.) are gone but persistent identifiers (advertising ID, cookie ID, IMEI, IP address) remain and can be used to track people with additional data. It's obvious to anyone that isn't braindead. This skirts the law since many forms of the data is "voluntarily" given up when you input data on apps, but data brokers don't let you track or delete data they have on you. Is that really *voluntary*? The only way to stop it is to become Amish because social media is quite integral to existing in society today. *Carpenter v. US* (2018) decided that the government needs a warrant to access CSLI largely because (1) phones are required to participate in modern society and thus are carried everywhere and (2) data is recorded without obvious and explicit consent and the only to stop CSLI from being recorded is turning off the phone's network connection or powering it off. Those reasons easily back an argument against current data broker practices. The case also talked about the dangers of having the government track citizens' every move in public spaces. That's possible with CSLI data (public + private spaces) but even easier with modern surveillance devices, like Flock Safety (only public spaces). Cory Doctorow shit on the company and endorsed an Ithaca anti-Flock group—first time I've heard of one. CCTV + ML makes location tracking of people trivial. I don't see the government making that illegal since they only work in public spaces, where people have don't have a reasonable expectation of privacy.
 
 If the government wanted to pushback against some Middle East enemies, rather than declaring war and going through the usual bureaucracy, what if they just funded and sold arms to a few countries, like [Egypt](https://ora.ox.ac.uk/objects/uuid:4c94d5cc-dc4a-4753-841c-b98ea96b4bcd/files/r6h440s67b). Or like some mujahideen rebels in Afghanistan to fight against Russian communism. What's the [worst](https://en.wikipedia.org/wiki/Taliban) that can happen? Worst case, Egypt gets fucked and the government loses a few billion dollars. Best case, they achieve their ends and get some oil for our boys back home. It's been going on a for a [while](https://en.wikipedia.org/wiki/1953_Iranian_coup_d%27%C3%A9tat). We've been participating in proxy wars *ad nauseum*. (I'll write more about this soon)
 
