--- a/src/blog-content/66.md
+++ b/src/blog-content/66.md
@@ -11,6 +11,6 @@ I unbox the packages immediately—this is so much more exciting than the instan
 
 Looking around, nothing seems to have a Phillips screw head. But I realize door hinges are perfect. Immediately—almost through some deep-set intuitive muscle memory—I ask Simon: "what if we steal Rahul's door?" ... "*Sure*". 
 
-Knowing that Rahul is about to leave the bathroom at any point and walk in, I run to his door and swiftly remove the six screws hold his door in place while Simon holds it steady. We then shove the door past our front door into the mudroom and run back. We hide the screws behind some cookies and nonchalantly sit down as if nothing happened. 
+Knowing that Rahul is about to leave the bathroom at any point and walk in, I run to his door and swiftly remove the six screws holding his door in place while Simon holds it steady. We then shove the door past our front door into the mudroom and run back. We hide the screws behind some cookies and nonchalantly sit down as if nothing happened. 
 
 Rahul comes back and wonders why we're struggling to hold back our laughter. Then he spots his missing door and goes ballistic. He threatens to call my dad. Rahul’s screaming, Simon’s cracking up, and I’m just sitting here thinking: *boy, this screwdriver works great*.
