--- a/src/blog-content/68.md
+++ b/src/blog-content/68.md
@@ -16,3 +16,5 @@ Energy powers systems (artificial and natural). Intelligence uses that power to 
 Archaea, bacteria, plants, algae, and all other biological organisms are machines we didn't design—their environments, through evolution, designed their hardware and software. They're remarkable because they self-replicate: spreading, adapting, and enduring without any divine design. Humanity is a continuation of this process.
 
 Machines we design are no different. Whether they operate in carbon or silicon, metabolize glycogen or lithium ions, they are still physical representations of Intelligence and Energy. Our greatest moral duty is to continue this propagation so we can better understand our reality and existence.
+
+The more I read about plants, humans, and machines, the more it feels like every distinction between these systems are arbitrary.
