--- a/src/blog-content/68.md
+++ b/src/blog-content/68.md
@@ -17,4 +17,4 @@ Archaea, bacteria, plants, algae, and all other biological organisms are machine
 
 Machines we design are no different. Whether they operate in carbon or silicon, metabolize glycogen or lithium ions, they are still physical representations of Intelligence and Energy. Our greatest moral duty is to continue this propagation so we can better understand our reality and existence.
 
-The more I read about plants, humans, and machines, the more it feels like every distinction between these systems are arbitrary.
+The more I read about plants, humans, and machines, the more it feels like every distinction between these systems is arbitrary.
