--- a/src/blog-content/70.md
+++ b/src/blog-content/70.md
@@ -7,7 +7,7 @@ imageLink: https://www.mbam.qc.ca/en/works/22548/
 ---
 I'm back from our annual Eclectic Convergence NYC bender. Rohan, Natalie, and I spent the last few days fucking around the city and meeting some cool people, like Cory Levy from ZFellows and Alaz Sengul from Garage.
 
-I enter my place and it feels like it has been weeks. I open the door of the mudroom and instantly realize my bike is gone and my helmet is on the ground. I swing my head to the other side of the room and a few letters and Amazon packages litter the ground. *There's no way someone stole it. They would have taken the other stuff. 
+I enter my place and it feels like it has been weeks. I open the door of the mudroom and instantly realize my bike is gone and my helmet is on the ground. I swing my head to the other side of the room and a few letters and Amazon packages litter the ground. *There's no way someone stole it. They would have taken the other stuff.* 
 
 *I swear I left it here.*
 
