--- a/src/blog-content/70.md
+++ b/src/blog-content/70.md
@@ -19,6 +19,6 @@ The moment I made the e-bike by sourcing a normal bike and some Alibaba electric
 
 I would check on my child constantly hoping no one would steal it. I told people that I'd rather have my computer stolen than the bike. Even while riding it through the tree-covered Ithaca roads and Stewart Ave's uncountable bumps, I felt like its fate was set and I would lose it soon. I could only attempt to prolong its life, nothing more. I guess I was right at the end.
 
-There seem to be two narratives of fate. Some people believe that fate is set and is out of our control. Since it's irrational to fight something beyond your control, it is best to follow the flow — everything that happens to you was meant to happen. Other people, like Karl Popper, disagree. They thing fate is made every second. It's your job to set it. 
+There seem to be two narratives of fate. Some people believe that fate is set and is out of our control. Since it's irrational to fight something beyond your control, it is best to follow the flow — everything that happens to you was meant to happen. Other people, like Karl Popper, disagree. They think fate is made every second. It's your job to set it. 
 
 Maybe fate is real, but it only reveals itself once you’ve already acted as if it isn’t.
