--- a/src/blog-content/71.md
+++ b/src/blog-content/71.md
@@ -9,13 +9,13 @@ I heard a Slavoj Žižek reel a while back talking about how wisdom is bad. Big 
 
 Smart people can produce airtight arguments for opposite conclusions because logic is underdetermined without a feedback mechanism. Good reasoning can float freely unless something in the world penalizes it.
 
-![/normal1.png](normal1)
+![normal1](/normal1.png)
 
 Chamath Palihapitiya makes the argument that data should drive decision making, like algorithmic and design decisions at Facebook. Any gut-feeling or intuition is BS.
 
 Simultaneously, Rick Rubin makes a great argument for the opposite.
 
-![/normal2.png](normal2)
+![normal2](/normal2.png)
 
 Who's right, Rick Rubin or Chamath? Jim Simons said "Trust the model" while Josh Kushner says his "deepest insecurity is that [he] has _intuitions_ about things that [he] cannot explain." Both are right because their strategies *actually work*.
 
