--- a/src/blog-content/72.md
+++ b/src/blog-content/72.md
@@ -2,8 +2,8 @@
 title: Harvard-Yale 2
 date: 2025-11-23
 headerImage: /smoker.png
-imageAuthor: Self-portrait with bandaged ear, Vincent Van Gogh
-imageLink: https://courtauld.ac.uk/highlights/self-portrait-with-bandaged-ear/
+imageAuthor: Self-portrait with bandaged ear and pipe, Vincent Van Gogh
+imageLink: https://www.vincentvangogh.org/self-portrait-with-bandaged-ear-and-pipe.jsp
 ---
 I’m on the train going to New Haven for Harvard-Yale. I waded through a moat of homeless people as I entered the Harlem-125th Street Station, but the wooden-paneled walls and stone corbels made the station seem like a declining-imperial ruin. I avoid eye contact, looking forward and I press my AirPods deeper into my ear. I'm torn between a Bilbo Baggins guilt and a John Galt discontent. My eyes feel dry and my feet ache from my 12-hour flight journey. The zipper to my bag breaks, bursting its contents onto my train bench.
 
