--- a/src/blog-content/73.md
+++ b/src/blog-content/73.md
@@ -7,7 +7,7 @@ imageLink: https://en.wikipedia.org/wiki/The_Abduction_of_Helen_(Reni)#/media/Fi
 ---
 It seems like you can predict the behavior of any agent based on the system it operates in. This might seem reductionist (*Homo economicus* as a model for human behavior in a capitalist system ignores behavioral psychology, which is why game theory is largely inaccurate) but it's true enough to be useful. 
 
-Nations are agents in the system of Power. We can assume they will do anything to maximize power, from clandestine assassinations abroad that violate treaties to compartmentalized security-clearance, largely useful to keep the domestic population oblivious of violations of laws by its government rather thahen increase national security against foreign nations.
+Nations are agents in the system of Power. We can assume they will do anything to maximize power, from clandestine assassinations abroad that violate treaties to compartmentalized security-clearance, largely useful to keep the domestic population oblivious of violations of laws by its government rather than increase national security against foreign nations.
 
 Machiavelli observed that "all armed prophets have conquered and unarmed ones failed." Rhetoric, law, treaties: none of it means anything without force backing it.
 
