--- a/src/blog-content/74.md
+++ b/src/blog-content/74.md
@@ -3,7 +3,7 @@ title: Hamilton is not real
 date: 2026-01-01
 headerImage: /schiz.png
 imageAuthor: Cartesian Shane Gillis
-imageLink:
+imageLink: https://www.tiktok.com/@whitewiggle/video/7512514247545376030
 ---
 *I'm not going schizophrenic.* You tell me.
 
